--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.task.scheduling.pool.size=1
 gemswap.delay=2000
 find.game.delay=5000
 
+smartfox.host=172.16.100.112
+smartfox.port=9933
+smartfox.zone=gmm
+
